# nexla-doc-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
app/: config.py  server.py
app/contracts/: documents.py
app/db/: session.py
app/handlers/: documents.py
app/repos/: base.py  document_repo.py  repo_container.py
app/routes/: documents.py
app/schemas/: documents.py
app/services/: embeddings_service.py
app/services/ingestion/: chunker.py  pdf_loader.py  service.py
app/services/retrieval/: helpers.py  reranker.py  service.py
app/services/synthesis/: prompts.py  service.py
app/tools/: text.py
evals/: __init__.py  retrieval_golden.jsonl  run_retrieval_eval.py
tests/: conftest.py  test_units.py
